// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Hero banner default renders correctly 1`] = `
<jest>
  <div
    class="bg-lighter text-dark text-center bcl-banner  hero"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner default renders correctly with title 1`] = `
<jest>
  <div
    class="bg-lighter text-dark text-center bcl-banner  hero"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="display-6 mb-3"
        >
          Hero banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner image shade renders correctly 1`] = `
<jest>
  <div
    class="bg-lighter text-center bcl-banner shade  hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner image shade renders correctly with title 1`] = `
<jest>
  <div
    class="bg-lighter text-center bcl-banner shade  hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="display-6 mb-3"
        >
          Hero banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner image text-block renders correctly 1`] = `
<jest>
  <div
    class="bg-lighter text-dark text-center bcl-banner  overlay hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner image text-block renders correctly with title 1`] = `
<jest>
  <div
    class="bg-lighter text-dark text-center bcl-banner  overlay hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="display-6 mb-3"
        >
          Hero banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner primary renders correctly 1`] = `
<jest>
  <div
    class="bg-primary text-white text-center bcl-banner  hero"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-light"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner primary renders correctly with title 1`] = `
<jest>
  <div
    class="bg-primary text-white text-center bcl-banner  hero"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="display-6 mb-3"
        >
          Hero banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-light"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner default renders correctly 1`] = `
<jest>
  <div
    class="bg-lighter text-dark text-center bcl-banner "
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner default renders correctly with title 1`] = `
<jest>
  <div
    class="bg-lighter text-dark text-center bcl-banner "
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="display-6 mb-3"
        >
          Page banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner image shade renders correctly 1`] = `
<jest>
  <div
    class="bg-lighter text-center bcl-banner shade "
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner image shade renders correctly with title 1`] = `
<jest>
  <div
    class="bg-lighter text-center bcl-banner shade "
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="display-6 mb-3"
        >
          Page banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner image text-block renders correctly 1`] = `
<jest>
  <div
    class="bg-lighter text-dark text-center bcl-banner  overlay"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner image text-block renders correctly with title 1`] = `
<jest>
  <div
    class="bg-lighter text-dark text-center bcl-banner  overlay"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="display-6 mb-3"
        >
          Page banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-primary"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner primary renders correctly 1`] = `
<jest>
  <div
    class="bg-primary text-white text-center bcl-banner "
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="display-6 mb-3"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-light"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner primary renders correctly with title 1`] = `
<jest>
  <div
    class="bg-primary text-white text-center bcl-banner "
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="display-6 mb-3"
        >
          Page banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="btn btn-light"
          href="/example.html"
        >
          Subscribe
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#chevron-right"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</jest>
`;
